# simian-detector

./: .gitignore  CMakeLists.txt  README.md
qt-frontend/: dnacontroller.cpp  dnacontroller.h  main.cpp  main.qml  resources.qrc
src/: main.cpp
src/api/: server.cpp  server.h
src/core/: simian_detector.cpp  simian_detector.h
src/db/: database.cpp  database.h
tests/: test_simian.cpp
